@@ -19,6 +19,6 @@ EXTRA_DIST = README README.CONFIG README.SM
 
 lib_LTLIBRARIES = libjabberd.la
 
-libjabberd_la_SOURCES = acl.cc config.cc heartbeat.cc mio.cc mio_tls.cc mtq.cc xdb.cc deliver.cc log.cc mio_raw.cc mio_xml.cc subjectAltName_asn1_tab.c
+libjabberd_la_SOURCES = acl.cc config.cc gcrypt_init.c heartbeat.cc mio.cc mio_tls.cc mtq.cc xdb.cc deliver.cc log.cc mio_raw.cc mio_xml.cc subjectAltName_asn1_tab.c
 libjabberd_la_LIBADD = -lexpat $(top_builddir)/jabberd/lib/libjabberdlib.la
 libjabberd_la_LDFLAGS = @LDFLAGS@ @VERSION_INFO@ -export-dynamic -version-info 1:0:0
