@@ -1,3 +1,9 @@
+2007-03-15  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/gcrypt_init.c: tell gcrypt that we are using pth
+    * jabberd/mio_tls.cc: same
+    * jabberd/jabberd.cc: same
+
 2007-03-14  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.cc: verifying OpenPGP identities, CRL processing, fatal
